--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -20,7 +20,7 @@
 
   <p>
     <label for="book_description">Description:</label><br>
-    <textarea type="text" name="book[description]" id="book_description"></textarea>
+    <textarea type="text" name="book[description]" id="book_description" value="<%= @book.description %>"></textarea>
   </p>
 
   <input type="submit" value="Editar livro">
